--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "serialport": "^12.0.0"
+  },
+  "engines":{
+    "node": ">=14.x <=18.x"
   }
 }
