--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",   // Use 'node' for production on Render
+    "dev": "nodemon index.js",  // Keep 'nodemon' for local development
+    "postinstall": "echo 'Post install step' && npm ls" // Optional: helps with debugging
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,7 @@
     "nodemon": "^3.1.7",
     "serialport": "^12.0.0"
   },
-  "engines":{
+  "engines": {
     "node": ">=14.x <=18.x"
   }
 }
