--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,9 @@
     "nodemon": "^3.1.7",
     "serialport": "^12.0.0"
   },
-  "engines": {
-  "node": "16.x", 
-  "npm": "8.x"
+ "engines": {
+  "node": "16.x || 18.x || 22.x",
+  "npm": "10.x"
 }
+
 }
